--- a/tweetapp/templates/tweetapp/listtweet.html
+++ b/tweetapp/templates/tweetapp/listtweet.html
@@ -1,12 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>List Tweet content deneme 1</h1>
 
-<ul>
+
+<div class="container" style="width: 60%;">
     {% for tweet in tweets %}
-        <!--<li>{{ tweet }}</li>-->
-        <li><h2>{{ tweet.nickname }} says: {{ tweet.message }}</h2></li>
+        <div class="card" style="padding:10px">
+                
+            <div class="card-header" style="background-color: cornflowerblue;">
+                <h4>{{ tweet.nickname }} </h4>
+            </div>
+            <div class="card-body">
+                <p class="card-text">{{ tweet.message }}</p>
+            </div>
+        </div>
     {% endfor %}
-</ul>
+</div>
 {% endblock %}
