--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -19,10 +19,8 @@
                             <p class="card-text">{{ field }}</p>
                         </div>
                     </div>
-                {% endfor %}            
-
-
-                <button type="submit" class="btn btn-primary" value="signup">Sinup</button>  <!-- **yorum 2** super user bilgileri ile giris yapilabilir--> 
+                {% endfor %}          
+                <button type="submit" class="btn btn-primary" value="signup">Signup</button>  <!-- **yorum 2** super user bilgileri ile giris yapilabilir--> 
             </div>            
         </form>
    
